# Secret-mcp

./: README.md  package-lock.json
mcp-server/: package-lock.json  package.json
mcp-server/src/: index.ts
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs
src/lib/: SecretForm.svelte  SecretList.svelte  api.ts
src/routes/: +page.svelte
