[package]
name = "secret-mcp"
version = "0.1.0"
description = "Local secrets manager with MCP server for AI assistants"
authors = ["you"]
edition = "2021"

[lib]
name = "secret_mcp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLite (bundled for cross-platform)
rusqlite = { version = "0.32", features = ["bundled"] }

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Time handling
chrono = "0.4"

# Mutex for thread-safe database access
once_cell = "1.19"

# Platform directories
dirs = "5"
